Primer commit proyecto FNAF

--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,5 +1,5 @@
 <header>
-    <img src="../../assets/bannerFNAF.jpg" class="banner-img"/>
+    <img src="assets/bannerFNAF.jpg" class="banner-img"/>
     <div class="easter-egg" (click)="playEasterEgg()"></div>
     <nav class="fnaf-nav" [ngClass]="tema">
     <ul>
